security enhanced by deleting session when logout

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -49,7 +49,7 @@
         </tbody>
 
     </table>
-    <a th:href="@{/login}" class="btn btn-primary btn-sm mb-3">log out</a>
+    <a th:href="@{/logout}" class="btn btn-primary btn-sm mb-3">log out</a>
 </div>
 </body>
 </html>
